fix(layout): fix container width on big screens
The combination of max-width and the percantage padding made the
container too small on wide screens, leading to the text breaking even
though there is plenty of space.

--- a/css/style.sass
+++ b/css/style.sass
@@ -37,7 +37,6 @@ a
 
 .intro
   display: block
-  max-width: 420px
   padding: 5% 4%
 
   .title
